archetect-minijinja/tests/snapshots/test_parser__parser@err_open_variable_block.txt.snap
---
source: archetect_minijinja/tests/test_parser.rs
description: "Hello {{ world"
input_file: archetect_minijinja/tests/parser-inputs/err_open_variable_block.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "unexpected end of input, expected end of variable block",
        name: "err_open_variable_block.txt",
        line: 1,
    },
)
