archetect-minijinja/tests/snapshots/test_parser__parser@max-recursion-expr.txt.snap
---
source: archetect_minijinja/tests/test_parser.rs
description: "{{ (((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((( 52 + 23 )))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))) }}"
input_file: archetect_minijinja/tests/parser-inputs/max-recursion-expr.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "template exceeds maximum recursion limits",
        name: "max-recursion-expr.txt",
        line: 1,
    },
)
